--- a/assignments.html
+++ b/assignments.html
@@ -314,7 +314,7 @@ $(document).ready(function () {
 <li><p>Interpret and report the results of a contingency-table analysis and a statistical inference from a chi-squared statistic</p></li>
 </ul>
 <p>Deadline: TBD</p>
-<p>Download: <a href="./assignments/assignment02.html">html file</a>; <a href="./data/cat_2.csv">cat_2.csv dataset</a></p>
+<p>Download: <a href="./assignments/assignment02.html">html file</a>; <a href="./data/cat.csv">cat.csv dataset</a></p>
 <p>Key: <a href="./assignments/keys/assignment02_key.docx">doc file</a>; <a href="./assignments/keys/assignment02_key.R">R script</a></p>
 </div>
 <div id="assignment-3" class="section level4">
@@ -333,7 +333,7 @@ $(document).ready(function () {
 <h4>3.4. Assignment 4</h4>
 <p>Continuous data 2: intro to bivariate regression</p>
 <p>Deadline: TBD</p>
-<p>Download: <a href="./assignments/assignment04.html">html file</a>; <a href="./data/cont.csv">cont.csv dataset</a></p>
+<p>Download: <a href="./assignments/assignment04.html">html file</a>; <a href="./data/cont2.csv">cont2.csv dataset</a></p>
 <p>Key: <a href="./assignments/keys/assignment04_key.docx">doc file</a>; <a href="./assignments/keys/assignment04_key.R">R script</a></p>
 </div>
 <div id="assignment-5" class="section level4">
