--- a/assignments/assignment02.html
+++ b/assignments/assignment02.html
@@ -224,15 +224,15 @@ pre code {
 <h4>2. Observed relationship between <em>absenteeism</em> and <em>treat</em></h4>
 <p>2.1. How many students in treatment group were chronically absent/not chronically absent? How many students in control group were chronically absent/not chronically absent? Provide your response and create a contingency table (frequencies in cell) to demonstrate your answer.</p>
 <p>2.2. What are the percentages of chronically absent and not chronically absent students in treatment group? How about in control group? Provide your response and create a contingency table (percentages in cell) to demonstrate your answer.</p>
-<p>2.3. Create a figure to visualize the numbers of chronically absent/not chronically absent students for treatment and control groups. Make sure to label the x- and y-axis.</p>
+<p>2.3. Create a figure to visualize the numbers of chronically absent/not chronically absent students for treatment and control groups. Make sure to label the x- and y-axes.</p>
 <p>2.4. Based on your observations from 2.1 to 2.3, do you think there is a relationship between <em>absenteeism</em> and <em>treat</em> (e.g., students whose teacher were in treatment group were less likely absent)? Why or why not?</p>
 </div>
-<div id="calculate-the-pearson-chi-squared-statistic" class="section level4">
-<h4>3. Calculate the Pearson Chi-Squared statistic</h4>
+<div id="chi-square-test-of-categorical-association" class="section level4">
+<h4>3. Chi-Square Test of Categorical Association</h4>
 <p>3.1. What are the percentages of chronically absent and not chronically absent students in the full sample? Suppose that there’s NO relationship between <em>absenteeism</em> and <em>treat</em>, redo the table in 2.1 using R code or by hand.</p>
 <p>3.2. Calculate the Chi-Squared statistic using the 2.1 and 3.1 tables. Use one sentence to describe the statistical meaning of this statistic. Do you think whether or not this statistic is resulted from sampling idiosyncrasy? Explain.</p>
 <p>3.3. Our first research question of interest is about whether there was a relationship between the two variables, <em>treat</em> and <em>absenteeism</em>. What is your null hypothesis for this research question?</p>
-<p>3.4. Perform a Pearson’s Chi-squared test (with Yates’ continuity correction) in R to investigate the relationship between <em>absenteeism</em> and <em>treat</em>. Write 3-4 sentences to interpret your results and answer the research question: Were the students less likely to be chronically absent if their teachers participated the consultancy PD intervention?</p>
+<p>3.4. Perform a Pearson’s Chi-squared test (with Yates’ continuity correction) in R to test the relationship between <em>absenteeism</em> and <em>treat</em>. Write 3-4 sentences to interpret your results and answer the research question: Were the students less likely to be chronically absent if their teachers participated the consultancy PD intervention?</p>
 </div>
 <div id="sub-sample-comparisons" class="section level4">
 <h4>4. Sub-sample comparisons</h4>
