--- a/schedule.html
+++ b/schedule.html
@@ -333,7 +333,7 @@ $(document).ready(function () {
 <ul>
 <li>Due TBD;</li>
 <li><a href="./assignments/assignment02.html">html file</a></li>
-<li><a href="./data/cat_2.csv">cat.csv dataset</a></li>
+<li><a href="./data/cat.csv">cat.csv dataset</a></li>
 </ul>
 </div>
 <div id="weeks-5---7" class="section level3">
@@ -370,7 +370,7 @@ $(document).ready(function () {
 <ul>
 <li>Due TBD</li>
 <li><a href="./assignments/assignment03.html">html file</a></li>
-<li>[cont.csv dataset (./data/cont.csv)</li>
+<li><a href="./data/cont.csv">cont.csv dataset</a></li>
 </ul>
 </div>
 <div id="weeks-8---10" class="section level3">
@@ -387,13 +387,13 @@ $(document).ready(function () {
 <ul>
 <li>Due TBD</li>
 <li><a href="./assignments/assignment04.html">html file</a></li>
-<li><a href="./data/cont.csv">cont.csv</a></li>
+<li><a href="./data/cont2.csv">cont2.csv dataset</a></li>
 </ul>
 <p>Assignment 5:</p>
 <ul>
 <li>Due TBD</li>
 <li><a href="./assignments/assignment05.html">html file</a></li>
-<li><a href="./data/ah.csv">ah.csv</a></li>
+<li><a href="./data/ah.csv">ah.csv dataset</a></li>
 </ul>
 </div>
 
