--- a/syllabus.html
+++ b/syllabus.html
@@ -392,7 +392,7 @@ div.tocify {
 <td align="left">2</td>
 <td align="left">2</td>
 <td align="left">summarizing and displaying categorical data</td>
-<td align="left">LSWR Ch 2</td>
+<td align="left">LSWR Ch 2 and 7</td>
 <td align="left">Assingment 1</td>
 <td align="left">Quiz 2</td>
 </tr>
@@ -400,7 +400,7 @@ div.tocify {
 <td align="left">3</td>
 <td align="left">3-4</td>
 <td align="left">Relationships between categorical variables</td>
-<td align="left">LSWR Ch 7</td>
+<td align="left">LSWR Ch 12</td>
 <td align="left">Assignment 2</td>
 <td align="left">Quiz 3</td>
 </tr>
